# CodeAgent

./: .env.example  .gitignore  pyproject.toml  web_demo.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
codeagent/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  demo.py
codeagent/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_provider.py  ollama_provider.py  openai_provider.py  types.py
codeagent/tools/: __init__.py  base.py  code_search.py  directory_list.py  file_edit.py  file_read.py  file_write.py  git_ops.py  registry.py  terminal.py
codeagent/ui/: __init__.py  console.py  panels.py  spinner.py
